# pong-demo

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: deploy.workflow.yml
fonts/JustMyType/: JustMyType.h
include/Handcrank/: Animation.hpp  Animator.hpp  Audio.hpp  AudioCache.hpp  FontCache.hpp  Handcrank.hpp  ImageRenderObject.hpp  RectRenderObject.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  TextureCache.hpp  TextureRenderObject.hpp  Utilities.hpp  Vector2.hpp  VertexRenderObject.hpp
include/HandcrankEngine/: Animation.hpp  Animator.hpp  Audio.hpp  AudioCache.hpp  FontCache.hpp  HandcrankEngine.hpp  ImageRenderObject.hpp  InputHandler.hpp  RectRenderObject.hpp  SceneManager.hpp  SpriteRenderObject.hpp  TextRenderObject.hpp  TextureCache.hpp  TextureRenderObject.hpp  Utilities.hpp  VertexRenderObject.hpp
src/: main.cpp
templates/: web-minimal.html
